syntax = "proto3";

package test;

option go_package = "generated/test";
import "google/protobuf/timestamp.proto";


service TestService {
    rpc NewTest(NewTestRequest) returns (NewTestResponse);

    rpc Writing(WritingRequest) returns (WritingResponse);
    rpc GetWritingQuestions(WritingRequest) returns (WritingResponse);

    rpc Speaking(SpeakingRequest) returns (SpeakingResponse);
    rpc GetSpeakingQuestions(SpeakingRequest) returns (SpeakingResponse);

    rpc ReadingQuestions(ReadingQuestionRequest) returns (ReadingResponse);
    rpc ReadingContent(ReadingContentRequest) returns (ReadingResponse);
    rpc GetReadingPassages(GetReadingPessagesRequest)returns (GetReadingPessagesResponse);
    rpc ReadingAnswer(ReadingAnswerRequest) returns (ReadingResponse);
    rpc ReadinResult(ReadingResultRequest) returns (ReadingResponse);
    rpc ReadingAttempts(ReadingAttemptsRequest) returns (ReadingResponse);
    rpc CheckReadingAnswers(CheckReadingAnswersRequest) returns (CheckReadingAnswersResponse);
    rpc GetReadingTrueAnswersBatch(GetReadingTrueAnswersBatchRequest) returns (GetReadingTrueAnswersBatchResponse);

    rpc ListeningQuestions(ListeningQuestionRequest) returns (ListeningResponse);
    rpc ListeningContent(ListeningContentRequest) returns (ListeningResponse);
    rpc GetListeningContent(GetListeningContentRequest) returns (GetListeningContentResponse);
    rpc ListeningResults(ListeningResultRequest) returns (ListeningResponse);
    rpc ListeningAttempts(ListeningAttemptsRequest) returns (ListeningResponse);
    rpc CheckListeningAnswers(CheckListeningAnswersRequest) returns (CheckListeningAnswersResponse);
    rpc GetListeningTrueAnswers(GetListeningTrueAnswersBatchRequest) returns (GetListeningTrueAnswersBatchResponse);
}

message NewTestRequest {
    int32 id =1 ;
    string name = 2;
}

message NewTestResponse {
    string message = 1;
}

message WritingRequest {
    int32 writingId = 1;
    int32 taskId = 2;
    int32 testId = 3;
    string question = 4;
}

message WritingResponse {
    string message = 1;
    string question = 2;

}

message SpeakingRequest {
    int32 speakingId = 1;
    string question = 2;
    int32 partId = 3;
    int32 testId = 4;
}

message SpeakingResponse {
    string message = 1;
    string question = 2;
}

message ReadingQuestionRequest {
    int32 orderId = 1;
    int32 pessageId = 2;
    map<int32, StringList> trueAnswers = 3;
    int32 contentId = 4;
    int32 testId = 5;
}

message ReadingQuestionResponse {
    int32 orderId = 1;
    int32 pessageId = 2;
    map<int32, StringList> trueAnswers = 3;
    int32 contentId = 4;
    repeated ReadingQuestionRequest questions = 5;
}

message ReadingContentRequest {
    int32 id = 1;
    int32 testId = 2;
    string body = 3;
    int32 passageId = 4;
}

message GetReadingPessagesRequest {
    repeated int32 passageIds = 1;
    int32 testId = 2;
    repeated string bodies = 3;
    int32 userId = 4;
}

message GetReadingPessagesResponse {
    map<string, string> bodies = 1;
}

message ReadingAnswer {
    int32 readingQId = 1;
    string answer = 2;
}

message ReadingAnswerRequest {
    repeated ReadingAnswer answers = 1;
    repeated  ReadingResultRequest results = 2;
    int32 userId = 3;
}

message ReadingResultRequest {
    int32 testId = 1;
    int32 userId = 2;
    int32 orderId = 3;
    string answer = 4;
    float score = 5;
    bool isCorrect = 6;
    int32 attemptId = 7;
    int32 pessageId = 8;
    repeated ReadingResultRequest results = 9;
}

message ReadingAttemptsRequest {
    int32 readingAtId = 1;
    int32 userId = 2;
    google.protobuf.Timestamp start = 3;
    google.protobuf.Timestamp end = 4;
    int32 orderId = 5;
    int32 questionId = 6;
    repeated int32 selectedPessage = 7;
}

message ReadingAttemptsResponse {
    string message = 1;
    google.protobuf.Timestamp end = 2;
}

message ReadingPessages{
    int32 pessageId = 1;
}

message ReadingResponse {
    string message = 1;
    int32 userId = 2;
    float score = 3;
    repeated ReadingAnswers results = 4;
    map<int32, StringList> answers = 5;
    int32 correctCount = 6;

}

message GetReadingContentResponse {
    int32 Id = 1;
    int32 testId = 2;
    string body = 3;
}

message CheckReadingAnswersRequest {
    repeated ReadingAnswers passages = 1;
    int32 userId = 2;
    int32 testId = 3;
    int32 attemptId = 4;
}

message CheckReadingAnswersResponse {
    int32 userId = 1;
    repeated ReadingAnswers result = 2;
    float score = 3;
    string answer = 4;
    int32 CorrectCount = 5;
}

message ReadingAnswers{
    int32 orderId = 1;
    string answer = 2;
    bool isCorrect = 3;
    int32 passageId = 4;
}

message RGetLastestAttemptRequest {
    int32 lastAttemptId = 1;
    int32 userId = 2;
}

message GetReadingTrueAnswersBatchRequest {
    repeated int32 passageIds = 1;
    repeated int32 orderIds = 2;
    int32 testId = 3;
}

message GetReadingTrueAnswersBatchResponse {
    map<int32, StringList> trueAnswers = 1;
    repeated string stringList = 2;
}

message StrSet{
    map<string, int32> values = 1;
}

message RGetLastestAttemptResponse {
    int32 lastAttemptId = 1;
    int32 userId = 2;
    int32 testId = 3;
}

message ReadingMessage{
    string message = 1;
}

message StringList {
  repeated string values = 1;
}


message ListeningQuestionRequest {
    map<int32, StringList> trueAnswers = 1;
    int32 contentId = 2;
    int32 orderId = 3;
    int32 sectionId = 4;
    int32 testId = 5;

}

message ListeningQuestionResponse{
    repeated string trueAnswers = 1;
    int32 contentId = 2;
    int32 orderId = 3;
    int32 sectionId = 4;
    repeated ListeningQuestionRequest questions = 5;
}

message ListeningContentRequest {
    int32 Id = 1;
    string body = 2;
    int32 testId = 3;
    int32 sectionId = 4;
}
message ListeningContentResponse {
    string message = 1;
}


message ListeningAttemptsRequest {
    int32 listeningAtId = 1;
    int32 userId = 2;
    google.protobuf.Timestamp start = 3;
    google.protobuf.Timestamp end = 4;
    int32 realEnd = 5;
    int32 result = 6;
}


message GetListeningContentRequest {
    repeated int32 Ids = 1;
    repeated string bodies = 2;
    int32 testId = 3;
    int32 userId = 4;
}

message GetListeningContentResponse {
    map<string, string> bodies = 1;
}

message ListeningResultRequest {
    int32 listeningRId = 1;
    int32 listeningAtId = 2;
    int32 orderId = 3;
    string Answer = 4;
    float score = 5;
    bool isCorrect = 6;
    int32 sectionId = 7;
    int32 userId = 8; 
    repeated ListeningResultRequest results = 9;
    int32 testId = 10;
}

message LLastestAttemptRequest {
    int32 lastAttemptId = 1;
    int32 userId = 2;
}

message LLastestAttemptResponse {
    int32 lastAttemptId = 1;
    int32 userId = 2;
    int32 testId = 3;
}

message CheckListeningAnswersRequest {
    repeated ListeningAnswer sections = 1;
    int32 userId = 2;
    int32 testId = 3;
    int32 attemptId = 4;
}

message CheckListeningAnswersResponse {
    int32 userId = 1;
    repeated ListeningAnswer result = 2;
    float score = 3;
    string answer = 4;
    int32 CorrectCount = 5;
}

message ListeningAttemptsResponse {
    string message = 1;
    google.protobuf.Timestamp end = 2;
}

message ListeningAnswer{
    int32 orderId = 1;
    string answer = 2;
    bool isCorrect = 3;
    int32 sectionId = 4;
}

message GetListeningTrueAnswersBatchRequest {
    repeated int32 sectionIds = 1;
    repeated int32 orderIds = 2;
    int32 testId = 3;
}

message GetListeningTrueAnswersBatchResponse {
    map<int32, StringList> trueAnswers = 1;
    repeated string stringList = 2;
}

message ListeningResponse {
    string message = 1;
    float score = 2;
    int32 userId = 3;
    int32 attemptId = 4;
    repeated ListeningAnswer result = 5;
    int32 correctCount = 6;

}